5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1834_2604.log
== SUBMITION (2019-07-06 16:13:11) 
-- CODE:
from numpy.linalg import*
a = array(eval(input()))
for i in range(shape(a)[0]):
	print(max(a[i,:]))
-- EXECUTION TIME:
0.984063
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2604/main.py", line 2, in <module>
    a = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-06 16:13:26) 
-- CODE:
from numpy.linalg import*
a = array(eval(input()))
for i in range(shape(a)[0]):
	print(max(a[i ,:]))
-- EXECUTION TIME:
0.966788
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2604/main.py", line 2, in <module>
    a = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-06 16:13:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
for i in range(shape(a)[0]):
	print(max(a[i ,:]))
-- EXECUTION TIME:
1.13097
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
